data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1724.wast
;; 5. **Misaligned Loop Entry**:    - **Description**: Define a loop with an initial operand on the stack, followed by a `br_if` with an incorrect label index within that loop.    - **Constraint**: Label mismatch inside loops.    - **CFG Impact**: Inconsistent entry point for the loop affecting loop iteration control in the CFG.

(assert_invalid
  (module
    (func $misaligned-loop-entry
      (block
        (loop
          (i32.const 1)
          (br_if 2 (i32.const 1))
        )
      )
    )
  )
  "unknown label"
)